--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ source-code: https://github.com/CollectionBuilder/collectionbuilder-gh
 # title of site appears in banner
 title: Chasing the Sun Digital Gallery 
 # tagline, a short phrase that will appear throughout the site in the top banner
-tagline: A digital gallery of sunrises and sunsets, created to inspire one's own creative journey with photography
+tagline: A Digital Gallery of Inspirational Sunrises and Sunsets
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
 description: This digital gallery contains twenty photographs of sunrises and sunsets from around the country taken in 2022. It is designed to inspire people to pause and observe the visible beauty around them, and to exercise their own artistic and creative journey with photography.
