--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ source-code: https://github.com/CollectionBuilder/collectionbuilder-gh
 # SITE SETTINGS
 #
 # title of site appears in banner
-title: Chasing the Sun Digital Gallery 
+title: Chasing the Sun 
 # tagline, a short phrase that will appear throughout the site in the top banner
 tagline: A Digital Gallery of Inspirational Sunrises and Sunsets
 # description appears in meta tags and other locations
