--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ title: Chasing the Sun
 tagline: A Digital Gallery of Inspirational Sunrises and Sunsets
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: This digital gallery contains twenty photographs of sunrises and sunsets from around the country taken in 2022. It is designed to inspire people to pause and observe the visible beauty around them, and to exercise their own artistic and creative journey with photography.
+description: This digital gallery contains twenty photographs of sunrises and sunsets from around the United States taken in 2022. It is designed to inspire people to pause and observe the visible beauty around them, and to exercise their own artistic and creative journey with photography.
 author: Karen Adjei
 
 ##########
